# Turtlebot3-annotations

./: ReadMe.md
turtlebot3/: CMakeLists.txt  package.xml
turtlebot3_bringup/: CMakeLists.txt  package.xml
turtlebot3_bringup/camera_info/: turtlebot3_rpicamera.yaml
turtlebot3_bringup/launch/: turtlebot3_core.launch  turtlebot3_lidar.launch  turtlebot3_model.launch  turtlebot3_realsense.launch  turtlebot3_remote.launch  turtlebot3_robot.launch  turtlebot3_rpicamera.launch
turtlebot3_bringup/launch/includes/: description.launch.xml
turtlebot3_bringup/scripts/: create_udev_rules
turtlebot3_bringup/src/: turtlebot3_diagnostics.cpp
turtlebot3_description/rviz/: ReadMe.md
turtlebot3_msgs/msg/: SensorState.msg  Sound.msg  VersionInfo.msg
