<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3</name>
  <version>1.2.3</version>
  <description>
    ROS packages for the Turtlebot3 (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="chc@robotis.com">HanCheol Cho</author>
  <author>Leon Jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 通过设定运行依赖项，指定元功能包中包含的子功能包 -->

  <!-- 启动Turtlebot3 -->
  <exec_depend>turtlebot3_bringup</exec_depend>
  <!-- 机器人模型相关 -->
  <exec_depend>turtlebot3_description</exec_depend>
  <!-- example -->
  <exec_depend>turtlebot3_example</exec_depend>
  <!-- 导航相关 -->
  <exec_depend>turtlebot3_navigation</exec_depend>
  <!-- SLAM 相关 -->
  <exec_depend>turtlebot3_slam</exec_depend>
  <!-- 键盘控制相关 -->
  <exec_depend>turtlebot3_teleop</exec_depend>

  <!-- 固定写法，指定当前功能包为元功能包 -->
  <export><metapackage/></export>
</package>
